# Fdf

./: CMakeLists.txt  Makefile  README.md  fdf.h  fractol  fractol.h  main.c  testmain.c
maparse/: ft_split.c  get_next_line.c  get_next_line.h  get_next_line_utils.c  map_parsing.c
render/: drawing_utils.c  map_drawing.c
test_maps/: 42.fdf  heart.fdf  plat.fdf
